# s21-peer-finder

./: CMakeLists.txt  Dockerfile  README.md
src/: main.cpp
src/api/: S21Api.cpp  S21Api.h
src/bot/: PeerFinderBot.cpp  PeerFinderBot.h  UserSession.h
src/models/: Campus.h  Cluster.h  Participant.h  ParticipantStatus.h
